@@ -196,127 +196,140 @@ class P4A_DB
 
 	/**
 	 * @param string $query
+	 * @param array $bind
 	 * @return array
 	 * @deprecated 
 	 */
-	public function getAll($query)
+	public function getAll($query, $bind = array())
 	{
-		return $this->adapter->fetchAll($query);
+		return $this->adapter->fetchAll($query, $bind);
 	}
 
 	/**
 	 * @param string $query
+	 * @param array $bind
 	 * @return array
 	 * @deprecated 
 	 */
-	public function queryAll($query)
+	public function queryAll($query, $bind = array())
 	{
-		return $this->adapter->fetchAll($query);
+		return $this->adapter->fetchAll($query, $bind);
 	}
 	
 	/**
 	 * @param string $query
+	 * @param array $bind
 	 * @return array
 	 */
-	public function fetchAll($query)
+	public function fetchAll($query, $bind = array())
 	{
-		return $this->adapter->fetchAll($query);
+		return $this->adapter->fetchAll($query, $bind);
 	}
 
 	/**
 	 * @param string $query
+	 * @param array $bind
 	 * @return array
 	 * @deprecated 
 	 */
-	public function getRow($query)
+	public function getRow($query, $bind = array())
 	{
-		return $this->adapter->fetchRow($query);
+		return $this->adapter->fetchRow($query, $bind);
 	}
 
 	/**
 	 * @param string $query
+	 * @param array $bind
 	 * @return array
 	 * @deprecated 
 	 */
-	public function queryRow($query)
+	public function queryRow($query, $bind = array())
 	{
-		return $this->adapter->fetchRow($query);
+		return $this->adapter->fetchRow($query, $bind);
 	}
 	
 	/**
 	 * @param string $query
+	 * @param array $bind
 	 * @return array
 	 */
-	public function fetchRow($query)
+	public function fetchRow($query, $bind = array())
 	{
-		return $this->adapter->fetchRow($query);
+		return $this->adapter->fetchRow($query, $bind);
 	}
 
 	/**
 	 * @param string $query
+	 * @param array $bind
 	 * @return array
 	 * @deprecated 
 	 */
-	public function getCol($query)
+	public function getCol($query, $bind = array())
 	{
-		return $this->adapter->fetchCol($query);
+		return $this->adapter->fetchCol($query, $bind);
 	}
 
 	/**
 	 * @param string $query
+	 * @param array $bind
 	 * @return array
 	 * @deprecated 
 	 */
-	public function queryCol($query)
+	public function queryCol($query, $bind = array())
 	{
-		return $this->adapter->fetchCol($query);
+		return $this->adapter->fetchCol($query, $bind);
 	}
 	
 	/**
 	 * @param string $query
+	 * @param array $bind
 	 * @return array
 	 */
-	public function fetchCol($query)
+	public function fetchCol($query, $bind = array())
 	{
-		return $this->adapter->fetchCol($query);
+		return $this->adapter->fetchCol($query, $bind);
 	}
 
 	/**
 	 * @param string $query
+	 * @param array $bind
 	 * @return string
 	 * @deprecated 
 	 */
-	public function getOne($query)
+	public function getOne($query, $bind = array())
 	{
-		return $this->adapter->fetchOne($query);
+		return $this->adapter->fetchOne($query, $bind);
 	}
 
 	/**
 	 * @param string $query
+	 * @param array $bind
 	 * @return string
 	 * @deprecated 
 	 */
-	public function queryOne($query)
+	public function queryOne($query, $bind = array())
 	{
-		return $this->adapter->fetchOne($query);
+		return $this->adapter->fetchOne($query, $bind);
 	}
 	
 	/**
 	 * @param string $query
+	 * @param array $bind
 	 * @return string
 	 */
-	public function fetchOne($query)
+	public function fetchOne($query, $bind = array())
 	{
-		return $this->adapter->fetchOne($query);
+		return $this->adapter->fetchOne($query, $bind);
 	}
 	
 	/**
 	 * @param string $query
+	 * @param array $bind
 	 * @return unknown
 	 */
-	public function query($query)
+	public function query($query, $bind = array())
 	{
-		return $this->adapter->query($query);
+		return $this->adapter->query($query, $bind);
 	}
 	
 	/**
